# hackatone-prof-system

./: .dockerignore  .env  .env.demo  .gitignore  1.txt  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AuthServer.sln  AuthServer.vcxproj  AuthServer.vcxproj.filters  CMakeLists.txt  Dockerfile  GeminiCtx.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  apiendpoints.txt  auth-service-spec.md  cmake_install.cmake  docker-compose.yml  sasal.ps1  спека.md
frontend/ProfSystemFrontend/: ApiClient.cpp  ApiClient.h  CMakeLists.txt  activeSessions_window.cpp  activeSessions_window.h  activeSessions_window.ui  adduser_dialog.cpp  adduser_dialog.h  adduser_dialog.ui  admin_window.cpp  admin_window.h  admin_window.ui  auditLog_window.cpp  auditLog_window.h  auditLog_window.ui  auth_window.cpp  auth_window.h  auth_window.ui  change_admin_password_window.h  change_adminpass_dialog.cpp  change_adminpass_dialog.h  change_adminpass_dialog.ui  change_adminpass_window.cpp  change_adminpass_window.h  change_adminpass_window.ui  edituser_dialog.cpp  edituser_dialog.h  edituser_dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  statistics_window.cpp  statistics_window.h  statistics_window.ui  user_roles.h  usersInfo_window.cpp  usersInfo_window.h  usersInfo_window.ui  usersapiqt.cpp  (+1 more)
migrations/: 001_initial_schema.sql
src/: Application.cpp  Application.h  Dockerfile  docker-compose.yml  jwt_utils.cpp  jwt_utils.h  loadenv.cpp  loadenv.h  main.cpp
src/Endpoints/: AuthEndpoints.cpp  AuthEndpoints.h  MonitoringEndpoints.cpp  MonitoringEndpoints.h  RoleEndpoints.cpp  RoleEndpoints.h  UserEndpoints.cpp  UserEndpoints.h  endpoints.cpp  endpoints.h
src/Entities/: Role.cpp  Role.h  User.cpp  User.h
src/InterfaceAdapters/: IRoleRepository.h  IUserRepository.h  PgRoleRepository.cpp  PgRoleRepository.h  PgUserRepository.cpp  PgUserRepository.h  RefreshTokenService.cpp  RefreshTokenService.h
src/Logger/: Logger.cpp  Logger.h
src/UseCases/: RoleService.cpp  RoleService.h  UserService.cpp  UserService.h
src/WARNINGS/: AuthenticateUserUseCase.cpp.txt  InMemoryUserRepository.cpp.txt  PlaintextPasswordHasher.cpp.txt  SimpleTokenGenerator.cpp.txt  User.cpp.txt  main.cpp.txt
src/application/dto/: AuthenticationRequest.hpp
src/application/ports/: IAuthenticationService.hpp
src/application/use_cases/: AuthenticateUserUseCase.cpp  AuthenticateUserUseCase.hpp
src/config/: auth_server.json
src/domain/entities/: AuditLog.cpp  AuditLog.hpp  Session.cpp  Session.hpp  User.cpp  User.hpp  UserRole.hpp
src/domain/interfaces/: IAuthConfigProvider.hpp
src/domain/repositories/: IAuditRepository.hpp  IUserRepository.hpp
src/domain/services/: IPasswordHasher.hpp  ITokenGenerator.hpp
src/infrastructure/adapters/: PlaintextPasswordHasher.cpp  PlaintextPasswordHasher.hpp  SimpleTokenGenerator.cpp  SimpleTokenGenerator.hpp
src/infrastructure/config/: AuthConfig.hpp
src/infrastructure/data/: InMemoryAuditRepository.cpp  InMemoryAuditRepository.hpp  InMemoryUserRepository.cpp  InMemoryUserRepository.hpp
src/migrations/: MigrationService.cpp  MigrationService.h
src/sql/: schema.sql
templates/: backend1-domain-layer.hpp  backend1-use-cases.hpp  backend2-infrastructure.hpp  complete-project-structure.md  Регламент Прософт-Системы.docx  разговор с заказчиком.txt
